# ai-sgents-arena-compition

./: README.md
ai_agents_arena/: More.md  README.md  config.py  hardware_detect.py  main.py  requirements.txt
ai_agents_arena/agents/: all_agents.py  base.py
ai_agents_arena/competition/: arena.py
ai_agents_arena/local/cpp/: CMakeLists.txt  llm_inference.cpp
ai_agents_arena/local/rust/: Cargo.toml
ai_agents_arena/local/rust/src/: main.rs
